--- a/services/public/src/index.html
+++ b/services/public/src/index.html
@@ -11,11 +11,32 @@
       * {
         box-sizing: border-box;
       }
+
+      #fs-load {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background-color: inherit;
+        align-items: center;
+        justify-content: center;
+        opacity: 0;
+        pointer-events: none;
+        transition: opacity 0.1s ease-in-out;
+        display: flex;
+      }
+
+      #fs-load.show {
+        opacity: 1;
+        pointer-events: all;
+      }
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <div id="root">Loading...</div>
+    <div id="fs-load"></div>
     <script src="/bundle.js"></script>
   </body>
 </html>
