--- a/services/public/src/index.html
+++ b/services/public/src/index.html
@@ -13,7 +13,7 @@
       }
 
       #fs-load {
-        position: absolute;
+        position: fixed;
         top: 0;
         right: 0;
         bottom: 0;
@@ -33,7 +33,7 @@
         width: 300px;
         bottom: 10px;
         opacity: 1;
-        position: absolute;
+        position: fixed;
         max-width: 100%;
       }
 
