--- a/services/public/src/index.html
+++ b/services/public/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Cards Against Humanity</title>
+    <title>Cards Against</title>
     <style>
       body {
         font-family: "Helvetica Neue", Helvetica, sans-serif;
