--- a/services/public/src/index.html
+++ b/services/public/src/index.html
@@ -54,7 +54,10 @@
         justify-content: center;
       }
     </style>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
   </head>
   <body>
     <div id="root">Loading...</div>
