--- a/services/public/src/index.html
+++ b/services/public/src/index.html
@@ -2,11 +2,21 @@
 <html>
   <head>
     <title>Cards Against</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <style>
       body {
-        font-family: "Helvetica Neue", Helvetica, sans-serif;
+        font-family: "Quicksand", sans-serif;
         background-color: #d4d4d4;
       }
+
+      /* @media (prefers-color-scheme: dark) {
+        body {
+          background-color: #1b1b1b;
+        }
+      } */
 
       * {
         box-sizing: border-box;
